Enable creation of refs to ARM common type and parameter definitions
